# containers

./: CMakeLists.txt  README.md  main.c
include/common/: util.h
include/sequence/: array_list.h  linked_list.h
src/common/: CMakeLists.txt  util.c
src/sequence/: CMakeLists.txt  array_list.c  linked_list.c
